<resources>
    <string name="app_name">Truth or Dare</string>
    <string name="app_description">Play the oldie but goodie game virtually.</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termsAndConditions">
        <![CDATA[
        <p>
        All users must comply with the terms and conditions on this page
    </p>

    <h4>Public Use</h4>
    <p>
       All users should commit to ethics and values and should refrain from insult and abuse of the site.
    </p>

    <h4>Privacy Policy</h4>
    <p>
        All users have to read the privacy policy linked to in the footer and their use of the website implicates agreement to the policy.
    </p>

    <h4>Denial of Access</h4>
    <p>
        Truth or Dare has the right to block any user from accessing the website or using it&#x27;s services in general.
    </p>

    <h4>Impersonation</h4>
    <p>
        Impersonation by name or subdomain is not allowed and Truth or Dare has the right to take adequate actions.
    </p>

    <h4>Inactive Accounts</h4>
    <p>
        Truth or Dare has the right to remove inactive accounts under the duration that Truth or Dare sees adequate.
    </p>

    <h4>Removal of Messages and Accounts</h4>
    <p>
        Truth or Dare has the right to remove any message or account with the justification that the website management sees adequate.
    </p>

    <h4>Information</h4>
    <p>
        Truth or Dare has the right to use the information input by users with agreement to the privacy policy
    </p>

    <h4>E-mail</h4>
    <p>
        Truth or Dare has the right to e-mail users with what Truth or Dare sees adequate with the option to unsubscribe from notification e-mails
    </p>

    <h4>Modifications of Terms and Conditions</h4>
    <p>
        We have the right to modify terms and conditions if needed and whenever adequate
    </p>

    <h4>Limits of Responsibility</h4>
    <p>
        All communicated content on the website is the responsibility of their owners and Truth or Dare is not responsible for its content or any damage that could result from this content or the use of any of the site&#x27;s services.
    </p>

    <h4>Contact Us</h4>
    <p>
        You can  contact us using the &quot;Contact Us&quot; page.
    </p>

<h2>Privacy Policy</h2>

    <p>
       We understand your fears and concerns regarding the privacy of your data on the internet. We have prepared this policy to help you understand the nature of the data we collect from your when visiting Truth or Dare and how we use this personal data.
    </p>

    <h4>Navigation</h4>
    <p>
        We didn&#x27;t design this website to collect your personal data from your computer while browsing this site. But will only use the data you provided with you being aware and your personal desire.
    </p>

    <h4>IP</h4>
    <p>
        At any time you visit any website on the internet including this website, the hosting server will record your internet protocol (IP) and the date and time of your visit and the type of the browser that you use and the URL of any website which referred you to this site on the web and the website may record it for different purposes.
    </p>

    <h4>Network Surveys</h4>
    <p>
        The surveys that we conduct on our network allows us to collect specific data like the data collected from your regarding your view and feeling about our website. Your responses are of great concern and an area of appreciation as it helps us to improve our site and you have the full freedom and choice to provide data related to your name and other data.
    </p>

    <h4>Links to External Sites</h4>
    <p>
        Our website may contain links to other sites in the internet or advertisements from other sites like Google AdSense and we are not considered responsible for the data collection methods of these websites. You can find the confidentiality policies and the content of these websites that can be accessed through any link on this site.&#xA;We may be assisted by third party advertising companies for the reason of displaying ads when you visit our website. These companies have the right to use information about your visit to this website and other websites (excluding the name, address or email or phone). This is to provide ads about products or services that you care about.
    </p>

    <h4>Disclosure of Information</h4>
    <p>
        We will always maintain your privacy and the confidentiality of your personal data that we get. We will never disclose the this information unless there is a law requirement or with good intention if we feel that this procedure is required or wanted to meet legal requirements. Or to defend or protect the ownership rights of this website or other parties benefiting from this site.
    </p>

    <h4>Required Data to do the necessary procedures from your side</h4>
    <p>
        When we need any data from you. We will ask you for your consent. As this data will help us contact you and satisfy your orders whenever possible. We will never sell the data you provide to any third party as part of personal marketing without your prior and written consent unless t was a part of bulk data used for statistics and research and it won&#x27;t contain any data to identify you.
    </p>

    <h4>When Contacting Us</h4>
    <p>
        We will consider all data provided by you confidential. The forms on our network require data that can help us improve our site. We will use data provided by you to answer all of your questions, observations, or orders through this site or other sites belonging to this site.
    </p>

    <h4>Disclosure of Information to Third Parties</h4>
    <p>
        We will not sell, trade, rent or disclose any information to any third party out of this website or sites out of our network and we will only disclose information when ordered by a legal or organizational entity.
    </p>

    <h4>Modification of Data Confidentiality and Privacy Policy</h4>
    <p>
        We have the right to modify the items and conditions of data confidentiality and privacy policy if needed and when adequate
    </p>

    <h4>Contacting Us</h4>
    <p>
        You can contact us using the methods described in the &quot;Contact Us&quot; page
    </p>

    <h4>Finally</h4>
    <p>
        Your concerns and fears regarding data confidentiality and privacy is a highly valuable thing to us. We hope that we will address these concerns by this policy.
    </p>
        ]]>
    </string>
    <string name="truth">Truth</string>
    <string name="truth_description">Ask anyone about anything and they shall answer truthfully.</string>
    <string name="dare">Dare</string>
    <string name="dare_description">Ask people to do some dares and see them while they take on the challenges.</string>
    <string name="title_activity_terms_and_conditions">Terms and Conditions</string>
    <string name="acceptTnC">I have read and accept the terms and conditions and the privacy policy written above.</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="instagram_client_id">ef58c02b9dec4202b9503782c41d66bb</string>
    <string name="instagram_client_secret">be0bebd6b82d4631b78f256de66d4cd6</string>
    <string name="instagram_callback_url_original">http://tanishqbhatia.000webhostapp.com/TruthorDare/identify.php</string>
    <string name="instagram_callback_url">https://goo.gl/ZSuR6U</string>
    <string name="notIdentified">Unable to identify, please login again.</string>
    <string name="okay">Okay</string>
    <string name="title_activity_instagram_identification">Instagram authorization</string>
</resources>
