<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/navigation_search"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:title="@string/title_dashboard"
        android:icon="@drawable/ic_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/title_notifications"
        android:icon="@drawable/ic_notifications" />

    <item
        android:id="@+id/navigation_user"
        android:title="@string/title_user"
        android:icon="@drawable/ic_user" />
</menu>
